--- a/src/presentation/pages/login/styles.scss
+++ b/src/presentation/pages/login/styles.scss
@@ -1,7 +1,94 @@
-* {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+@import '../../styles/colors.scss';
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+
+  .header {
+    padding: 8px;
+    background-color: $primary;
+    color: $white;
+  }
+
+  .form {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+    border-radius: 8px;
+    align-self: center;
+    box-shadow: 0px 1px 3px -1px $black;
+
+    h2 {
+      margin-bottom: 12px;
+      text-align: center;
+      font-size: 24px;
+    }
+  }
+
+  .footer {
+    height: 32px;
+    background-color: $primary;
+  }
+
+  .inputWrap {
+    display: flex;
+    flex-direction: column;
+
+    input {
+      margin-top: 8px;
+    }
+
+    .status {
+      color: red;
+      font-style: italic;
+    }
+  }
+
+  .submit {
+    margin-top: 18px;
+    height: 48px;
+    background-color: $primary;
+    color: $white;
+    padding: 8px;
+    border-radius: 8px;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      opacity: 0.92;
+    }
+  }
+
+  .link {
+    display: flex;
+    align-self: center;
+    margin-top: 16px;
+    color: $primary;
+    text-transform: lowercase;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .errorWrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .error {
+      margin-top: 30px;
+      color: red;
+    }
+
+    .spinner {
+      margin-top: 30px;
+    }
+  }
 }
