refactor: change background color

--- a/src/presentation/styles/colors.scss
+++ b/src/presentation/styles/colors.scss
@@ -1,5 +1,7 @@
 $white: #fff;
 $black: #000;
+$backgroundLight: #eeeeee;
+$backgroundDark: #303030;
 $primary: #1e4487;
 $primaryDark: #173b7b;
 $primaryLight: #2968dc;
