--- a/src/presentation/pages/login/styles.scss
+++ b/src/presentation/pages/login/styles.scss
@@ -14,6 +14,7 @@
     border-radius: 8px;
     align-self: center;
     box-shadow: 0px 1px 3px -1px $black;
+    background-color: $white;
 
     h2 {
       margin-bottom: 12px;
