--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: $backgroundLight;
+}
+
 input[type='email'],
 input[type='password'] {
   border: 1px solid $primaryLight;
