--- a/src/presentation/pages/login/styles.scss
+++ b/src/presentation/pages/login/styles.scss
@@ -38,6 +38,11 @@
     &:hover {
       opacity: 0.92;
     }
+
+    &:disabled {
+      cursor: not-allowed;
+      opacity: 1;
+    }
   }
 
   .link {
