--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -13,7 +13,8 @@ body {
 }
 
 input[type='email'],
-input[type='password'] {
+input[type='password'],
+input[type='text'] {
   border: 1px solid $primaryLight;
   border-radius: 4px;
   line-height: 32px;
