refactor: add SubmitButton

--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -22,3 +22,14 @@ input[type='text'] {
   outline: none;
   padding-left: 4px;
 }
+
+button {
+  &:hover {
+    opacity: 0.92;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 1;
+  }
+}
