--- a/src/presentation/components/header/styles.scss
+++ b/src/presentation/components/header/styles.scss
@@ -4,4 +4,19 @@
   padding: 8px;
   background-color: $primary;
   color: $white;
+  display: flex;
+  justify-content: space-between;
+
+  .link {
+    color: $white;
+    text-decoration: none;
+
+    &:hover {
+      opacity: 0.8;
+    }
+
+    &:first-child {
+      margin-right: 18px;
+    }
+  }
 }
